# quart_template

./: .config  .config.prod  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_app.py  startup.sh
notebooks/: agent.ipynb  boto3.ipynb  pydantic-ai-OCR.ipynb  pydantic-ai.ipynb
src/: application.py  create_app.py
src/blueprints/: process.py
src/configs/: app_conf.py  feature_conf.py
src/service/: __init__.py  pdf2img.py
src/service/invoice/: __init__.py  prompts.py  schemas.py  service.py  utility.py
src/set_up/: api_schema.py  envvar_setup.py  health_setup.py  lifespan_setup.py  logging_setup.py  timezone_setup.py  uploads_setup.py  warning_setup.py
