[project]
name = "invoice-infer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "pytz>=2025.1",
    "pdf2image>=1.17.0",
    "quart>=0.19.9",
    "quart-cors>=0.8.0",
    "pydantic-ai>=0.0.46",
    "hypercorn>=0.17.3",
    "fastenv>=0.6.0",
    "quart-uploads>=0.0.4",
    "quart-schema>=0.21.0",
]

[tool.uv]
dev-dependencies = [
    "jupyter>=1.1.1",
    "ruff>=0.11.0",
]

[tool.ruff]
exclude = [
    ".ruff_cache",
    ".git",
    ".ipynb_checkpoints",
    ".venv",
    ".vscode",
    "notebooks"
]
extend-include = []
line-length = 120
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
ignore = ["ANN204", "ANN401", "E731", "D", "DTZ005", "BLE001","B008", "CPY001","COM812", "ERA001", "EM101","EM102", "FA","FBT", "G004", "UP", "TRY", "PTH123","ISC001" ]
select = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
